Fix horizontal scroll #master

--- a/src/app/shared/components/list-box-filter/list-box-filter.component.scss
+++ b/src/app/shared/components/list-box-filter/list-box-filter.component.scss
@@ -3,7 +3,7 @@
 @import "fonts.scss";
 
 .container {
-    width: 100%;
+    width: 95%;
 }
 
 .title {
