--- a/src/app/shared/components/period-filter/period-filter.component.scss
+++ b/src/app/shared/components/period-filter/period-filter.component.scss
@@ -2,7 +2,7 @@
 @import "fonts.scss";
 
 .container {
-    width: 100%;
+    width: 95%;
 
     .header {
         display: flex;
